--- a/.project.json
+++ b/.project.json
@@ -24,5 +24,12 @@
       "compass": {},
       "bFacade": true
     }
+  },
+  "mockpreview": {
+    "mockUri": "",
+    "metadataFilePath": "model/metadata.xml",
+    "loadJSONFiles": false,
+    "loadCustomRequests": false,
+    "mockRequestsFilePath": ""
   }
 }
